@@ -15,16 +15,22 @@
 #[derive(Debug, clap::Parser)]
 #[command(version, about)]
 struct Opt {
+    /// Output the result to a file.
+    #[arg(short, long, value_name("FILE"))]
+    output: Option<std::path::PathBuf>,
+
     /// Input file.
+    ///
+    /// If [FILE] is not specified, data will be read from stdin.
     #[arg(value_name("FILE"))]
-    input: std::path::PathBuf,
+    input: Option<std::path::PathBuf>,
 }
 
 #[cfg(feature = "std")]
 fn main() -> anyhow::Result<()> {
     use std::{
         fs,
-        io::{self, Write},
+        io::{self, Read, Write},
     };
 
     use anyhow::Context;
@@ -34,8 +40,15 @@ fn main() -> anyhow::Result<()> {
 
     let opt = Opt::parse();
 
-    let ciphertext = fs::read(&opt.input)
-        .with_context(|| format!("could not read data from {}", opt.input.display()))?;
+    let ciphertext = if let Some(file) = opt.input {
+        fs::read(&file).with_context(|| format!("could not read data from {}", file.display()))
+    } else {
+        let mut buf = Vec::new();
+        io::stdin()
+            .read_to_end(&mut buf)
+            .context("could not read data from stdin")?;
+        Ok(buf)
+    }?;
 
     let passphrase = Password::with_theme(&ColorfulTheme::default())
         .with_prompt("Enter passphrase")
@@ -49,10 +62,14 @@ fn main() -> anyhow::Result<()> {
         .decrypt_to_vec()
         .context("the encrypted data is corrupted")?;
 
-    io::stdout()
-        .write_all(&plaintext)
-        .context("could not write data to stdout")?;
-    Ok(())
+    if let Some(file) = opt.output {
+        fs::write(&file, plaintext)
+            .with_context(|| format!("could not write data to {}", file.display()))
+    } else {
+        io::stdout()
+            .write_all(&plaintext)
+            .context("could not write data to stdout")
+    }
 }
 
 #[cfg(not(feature = "std"))]
