@@ -14,6 +14,13 @@ All notable changes to this project will be documented in this file.
 The format is based on https://keepachangelog.com/[Keep a Changelog], and this
 project adheres to https://semver.org/[Semantic Versioning].
 
+== {compare-url}/v0.8.5\...HEAD[Unreleased]
+
+=== Changed
+
+* Supports input from stdin and output to a file in the examples
+  ({pull-request-url}/93[#93])
+
 == {compare-url}/v0.8.4\...v0.8.5[0.8.5] - 2023-11-29
 
 === Changed
